--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,13 @@
-name: CI
+name: CI Test
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  test-run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: 8.0.x
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-
-      - name: Restore dependencies
-        run: dotnet restore ./backend
-
-      - name: Build backend
-        run: dotnet build --no-restore ./backend
-
-      - name: Install frontend dependencies
-        run: npm install --prefix ./frontend
-
-      - name: Build frontend
-        run: npm run build --prefix ./frontend
+      - name: Say Hello
+        run: echo "✅ CI/CD is working!"
