--- a/backend/src/MyApp.Application/ExpoConnect.Application.csproj
+++ b/backend/src/MyApp.Application/ExpoConnect.Application.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\MyApp.Domain\MyApp.Domain.csproj" />
+    <ProjectReference Include="..\MyApp.Domain\ExpoConnect.Domain.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
