--- a/backend/ExpoConnect.Api/appsettings.Development.json
+++ b/backend/ExpoConnect.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
     "RefreshTokenDays": 7
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=expo_connect_db;Username=postgres;Password=postgres123"
+    "Default": ""
   }
 }
