REmove password from appsettins

--- a/backend/ExpoConnect.Api/appsettings.json
+++ b/backend/ExpoConnect.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=expo_connect_db;Username=postgres;Password=postgres123"
+    "Default": ""
   },
   "Jwt": {
     "Issuer": "ExpoConnect",
