--- a/mobile/QR/QR.csproj
+++ b/mobile/QR/QR.csproj
@@ -44,7 +44,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<MauiXaml Update="AddNewItemPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="ApiClientService.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="GetCatalogs.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="LoginOptionsPage.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
 		<MauiXaml Update="LoginPage.xaml">
